--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,13 @@
   cursor: pointer;
 }
 
+.hiddenMsgContainer {
+  min-height: 150px;
+
+}
 [class^="hiddenMessage"] {
+  opacity: 0;
+  transition:ease opacity 500ms;
   color: #000;
   font-size: 15px;
   line-height: 18px;
